--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.2.14",
     "@supabase/supabase-js": "^2.52.1",
+    "@types/three": "^0.179.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
+    "gsap": "^3.13.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -33,6 +36,7 @@
     "react-router-dom": "^7.7.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.179.1",
     "zod": "^4.0.8"
   },
   "devDependencies": {
